src/objects/Creative_Shoot__c.object
<CustomObject>
    <description>An event in the real world involving the recording of people for use in our marketing</description>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <length>63</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Description</label>
        <length>63</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Video</fullName>
                    <default>true</default>
                    <label>Video</label>
                </value>
                <value>
                    <fullName>Photo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Creative Shoot</label>
    <nameField>
        <displayFormat>CS-{0}</displayFormat>
        <label>Creative Shoot Identifier</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Creative Shoots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>